name:                supplyChainServer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.csiro.au/Blockchain/supplyChainServer
license:             BSD3
license-file:        LICENSE
author:              Sara Falamaki
maintainer:          Sara.Falamaki@csiro.au
copyright:           2017 CSIRO
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-extensions: OverloadedStrings
  hs-source-dirs:     src
  exposed-modules:    Mirza.Common.Types
                    , Mirza.SupplyChain.API
                    , Mirza.SupplyChain.Migrate
                    , Mirza.SupplyChain.BeamQueries
                    , Mirza.SupplyChain.Model
                    , Mirza.SupplyChain.StorageBeam
                    , Mirza.SupplyChain.Types
                    , Mirza.SupplyChain.QueryUtils
                    , Mirza.SupplyChain.Utils
                    , Mirza.SupplyChain.Service
                    , Mirza.SupplyChain.Client.Servant
  
  other-modules:      Mirza.SupplyChain.MigrateUtils
                    , Mirza.SupplyChain.MigrateScript
                    , Mirza.SupplyChain.Errors
                    , Mirza.SupplyChain.ErrorUtils
  build-depends:      base >= 4.7 && < 5
                    , GS1Combinators
                    , aeson
                    , base64-bytestring
                    , beam-core
                    , beam-migrate
                    , beam-migrate
                    , beam-postgres
                    , binary
                    , bytestring
                    , cryptonite
                    , hoist-error >= 0.2
                    , HsOpenSSL
                    , hspec
                    , http-types >= 0.9.1
                    , insert-ordered-containers
                    , lens
                    , mtl
                    , postgresql-simple
                    , resource-pool >= 0.2.3
                    , scrypt
                    , servant
                    , servant-client >= 0.13
                    , servant-flatten
                    , servant-server
                    , servant-swagger
                    , servant-swagger-ui
                    , string-conversions
                    , swagger2
                    , text
                    , time
                    , transformers >= 0.4
                    , uuid
                    , uuid-types
                    , wai
  default-language:   Haskell2010
  default-extensions: FlexibleContexts
                    , FlexibleInstances

executable supplyChainServer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       bytestring
                     , base
                     , supplyChainServer
                     , optparse-applicative
                     , GS1Combinators
                     , text
                     , uuid
                     , base64-bytestring
                     , postgresql-simple
                     , resource-pool
                     , scrypt
                     , servant-server
                     , servant-swagger-ui
                     , warp
  ghc-options:         -threaded -Wall -Werror -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite supplyChainServer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Tests.Service
                    , Tests.Dummies
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , GS1Combinators
                     , supplyChainServer
                     , aeson
                     , base-compat
                     , resource-pool >= 0.2.3
                     , base64-bytestring
                     , beam-core
                     , beam-postgres
                     , binary
                     , bytestring
                     , cryptonite
                     , HsOpenSSL
                     , hspec
                     , insert-ordered-containers
                     , lens
                     , mtl
                     , postgresql-simple
                     , scrypt
                     , servant-server
                     , servant-swagger
                     , servant-swagger-ui
                     , string-conversions
                     , swagger2
                     , text
                     , time
                     , uuid
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror

source-repository head
  type:     git
  location: https://github.csiro.au/Blockchain/supplyChainServer
