name:                supplyChainServer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.csiro.au/Blockchain/supplyChainServer
license:             BSD3
license-file:        LICENSE
author:              Sara Falamaki
maintainer:          Sara.Falamaki@csiro.au
copyright:           2017 CSIRO
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-extensions: OverloadedStrings
                    , FlexibleContexts
                    , FlexibleInstances
  hs-source-dirs:     src
  exposed-modules:    Mirza.BusinessRegistry.API
                    , Mirza.BusinessRegistry.Client.Servant
                    , Mirza.BusinessRegistry.Auth
                    , Mirza.BusinessRegistry.Database.Schema
                    , Mirza.BusinessRegistry.Database.Schema.V0001
                    , Mirza.BusinessRegistry.Handlers.Business
                    , Mirza.BusinessRegistry.Handlers.Common
                    , Mirza.BusinessRegistry.Handlers.Keys
                    , Mirza.BusinessRegistry.Interactive
                    , Mirza.BusinessRegistry.Main
                    , Mirza.BusinessRegistry.Service
                    , Mirza.BusinessRegistry.Handlers.Users
                    , Mirza.BusinessRegistry.Types
                    , Mirza.Common.Beam
                    , Mirza.Common.GS1BeamOrphans
                    , Mirza.Common.Types
                    , Mirza.Common.Utils
                    , Mirza.Common.Time
                    , Mirza.SupplyChain.API
                    , Mirza.SupplyChain.Auth
                    , Mirza.SupplyChain.Client.Servant
                    , Mirza.SupplyChain.Handlers.Common
                    , Mirza.SupplyChain.Handlers.Contacts
                    , Mirza.SupplyChain.Handlers.EventRegistration
                    , Mirza.SupplyChain.Handlers.Queries
                    , Mirza.SupplyChain.Handlers.Signatures
                    , Mirza.SupplyChain.Handlers.Users
                    , Mirza.SupplyChain.Main
                    , Mirza.SupplyChain.Migrate
                    , Mirza.SupplyChain.QueryUtils
                    , Mirza.SupplyChain.Service
                    , Mirza.SupplyChain.StorageBeam
                    , Mirza.SupplyChain.Types


  other-modules:      Mirza.SupplyChain.MigrateScript
                    , Mirza.SupplyChain.ErrorUtils
  build-depends:      base >= 4.7 && < 5
                    , GS1Combinators
                    , aeson
                    , base64-bytestring
                    , beam-core
                    , beam-migrate
                    , beam-postgres
                    , binary
                    , bytestring
                    , cryptonite
                    , hoist-error >= 0.2
                    , HsOpenSSL
                    , hspec
                    , http-types >= 0.9.1
                    , insert-ordered-containers
                    , katip >= 0.5.4
                    , lens
                    , mtl
                    , optparse-applicative
                    , postgresql-simple
                    , resource-pool >= 0.2.3
                    , scrypt
                    , servant
                    , servant-client >= 0.13
                    , servant-flatten
                    , servant-server
                    , servant-swagger
                    , servant-swagger-ui
                    , string-conversions
                    , swagger2
                    , text
                    , time
                    , transformers >= 0.4
                    , uuid
                    , uuid-types
                    , wai
                    , warp
  default-language:   Haskell2010




executable supplyChainServer-exe
  hs-source-dirs:       app
  main-is:              SupplyChainServer.hs
  ghc-options:          -threaded -Wall -Werror -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , supplyChainServer

executable businessRegistry
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              BusinessRegistry.hs
  ghc-options:          -threaded -Wall -Werror -rtsopts -with-rtsopts=-N
  build-depends:        base >= 4.7 && < 5
                      , supplyChainServer

test-suite supplyChainServer-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Mirza/SupplyChain/Spec.hs
  other-modules:      Mirza.SupplyChain.Tests.Service
                    , Mirza.SupplyChain.Tests.Dummies
                    , Mirza.SupplyChain.Tests.Client
                    , Mirza.SupplyChain.Tests.Settings
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , GS1Combinators
                     , supplyChainServer
                     , aeson
                     , base-compat
                     , resource-pool >= 0.2.3
                     , base64-bytestring
                     , beam-core
                     , beam-postgres
                     , binary
                     , bytestring
                     , cryptonite
                     , HsOpenSSL
                     , hspec
                     , hspec-core
                     , http-client
                     , insert-ordered-containers
                     , lens
                     , mtl
                     , network
                     , postgresql-simple
                     , scrypt
                     , servant
                     , servant-server
                     , servant-swagger
                     , servant-swagger-ui
                     , string-conversions
                     , swagger2
                     , text
                     , time
                     , uuid
                     , tasty
                     , tasty-hspec
                     , wai
                     , warp
                     , servant-client
                     , katip
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror

test-suite businessRegistry-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Mirza/BusinessRegistry/Spec.hs
  other-modules:      Mirza.BusinessRegistry.Tests.Keys
                    , Mirza.BusinessRegistry.Tests.Dummies
                    , Mirza.BusinessRegistry.Tests.Business
                    , Mirza.BusinessRegistry.Tests.Client
                    , Mirza.BusinessRegistry.Tests.Settings
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , GS1Combinators
                     , supplyChainServer
                     , aeson
                     , base-compat
                     , resource-pool >= 0.2.3
                     , base64-bytestring
                     , beam-core
                     , beam-postgres
                     , binary
                     , bytestring
                     , cryptonite
                     , HsOpenSSL
                     , hspec
                     , hspec-core
                     , http-client
                     , insert-ordered-containers
                     , lens
                     , mtl
                     , network
                     , postgresql-simple
                     , scrypt
                     , servant
                     , servant-server
                     , servant-swagger
                     , servant-swagger-ui
                     , string-conversions
                     , swagger2
                     , text
                     , time
                     , uuid
                     , tasty
                     , tasty-hspec
                     , wai
                     , warp
                     , servant-client
                     , katip
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror



source-repository head
  type:     git
  location: https://github.csiro.au/Blockchain/supplyChainServer
