name:                supplyChainServer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.csiro.au/Blockchain/supplyChainServer
license:             BSD3
license-file:        LICENSE
author:              Sara Falamaki
maintainer:          Sara.Falamaki@csiro.au
copyright:           2017 CSIRO
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-extensions: OverloadedStrings
                    , FlexibleContexts
                    , FlexibleInstances
  hs-source-dirs:     src
  exposed-modules:    Mirza.BusinessRegistry.API
                    , Mirza.BusinessRegistry.Client.Servant
                    , Mirza.BusinessRegistry.Auth
                    , Mirza.BusinessRegistry.Database.Migrate
                    , Mirza.BusinessRegistry.Database.Schema
                    , Mirza.BusinessRegistry.Database.Schema.V0001
                    , Mirza.BusinessRegistry.Database.Schema.V0002
                    , Mirza.BusinessRegistry.Handlers.Business
                    , Mirza.BusinessRegistry.Handlers.Common
                    , Mirza.BusinessRegistry.Handlers.Keys
                    , Mirza.BusinessRegistry.Main
                    , Mirza.BusinessRegistry.Service
                    , Mirza.BusinessRegistry.Handlers.Users
                    , Mirza.BusinessRegistry.Types
                    , Mirza.Common.Beam
                    , Mirza.Common.GS1BeamOrphans
                    , Mirza.Common.Types
                    , Mirza.Common.Utils
                    , Mirza.Common.Time
                    , Mirza.SupplyChain.API
                    , Mirza.SupplyChain.Auth
                    , Mirza.SupplyChain.Client.Servant
                    , Mirza.SupplyChain.Database.Migrate
                    , Mirza.SupplyChain.Database.Schema
                    , Mirza.SupplyChain.Database.Schema.V0001
                    , Mirza.SupplyChain.Handlers.Common
                    , Mirza.SupplyChain.Handlers.Contacts
                    , Mirza.SupplyChain.Handlers.EventRegistration
                    , Mirza.SupplyChain.Handlers.Queries
                    , Mirza.SupplyChain.Handlers.Signatures
                    , Mirza.SupplyChain.Handlers.Users
                    , Mirza.SupplyChain.Main
                    , Mirza.SupplyChain.QueryUtils
                    , Mirza.SupplyChain.Service
                    , Mirza.SupplyChain.Types


  other-modules:      Mirza.SupplyChain.ErrorUtils
  build-depends:      base >= 4.7 && < 5
                    , GS1Combinators
                    , aeson
                    , base64-bytestring
                    , beam-core
                    , beam-migrate
                    , beam-postgres
                    , bytestring
                    , hoist-error >= 0.2
                    , HsOpenSSL >= 0.11.4.14
                    , http-client
                    , insert-ordered-containers
                    , katip >= 0.5.4
                    , lens
                    , mtl
                    , optparse-applicative
                    , postgresql-simple
                    , random
                    , resource-pool >= 0.2.3
                    , scrypt
                    , servant
                    , servant-client >= 0.13
                    , servant-flatten
                    , servant-server
                    , servant-swagger
                    , servant-swagger-ui
                    , swagger2
                    , text
                    , time
                    , transformers >= 0.4
                    , uuid
                    , uuid-types
                    , wai
                    , warp
  default-language:   Haskell2010


executable supplyChainServer-exe
  hs-source-dirs:       app
  main-is:              SupplyChainServer.hs
  ghc-options:          -threaded -Wall -Werror -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , supplyChainServer

executable businessRegistry
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              BusinessRegistry.hs
  ghc-options:          -threaded -Wall -Werror -rtsopts -with-rtsopts=-N
  build-depends:        base >= 4.7 && < 5
                      , supplyChainServer

test-suite supplyChainServer-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Mirza/SupplyChain/Spec.hs
  other-modules:      Mirza.Common.Tests.ServantUtils
                    , Mirza.Common.Tests.Utils
                    , Mirza.Common.Tests.InitClient
                    , Mirza.SupplyChain.Tests.Service
                    , Mirza.SupplyChain.Tests.Dummies
                    , Mirza.SupplyChain.Tests.Client
                    , Mirza.BusinessRegistry.Tests.Utils
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , base64-bytestring
                     , GS1Combinators
                     , supplyChainServer
                     , resource-pool >= 0.2.3
                     , beam-core
                     , beam-postgres
                     , bytestring
                     , hspec
                     , hspec-core
                     , http-client
                     , network
                     , postgresql-simple
                     , scrypt
                     , servant
                     , servant-server
                     , HsOpenSSL >= 0.11.4.14
                     , text
                     , time
                     , uuid
                     , tasty
                     , tasty-hspec
                     , tasty-hunit
                     , hspec-expectations
                     , wai
                     , warp
                     , servant-client
                     , katip
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror

test-suite businessRegistry-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Mirza/BusinessRegistry/Spec.hs
  other-modules:      Mirza.Common.Tests.ServantUtils
                    , Mirza.Common.Tests.Utils
                    , Mirza.Common.Tests.InitClient
                    , Mirza.BusinessRegistry.Tests.Keys
                    , Mirza.BusinessRegistry.Tests.Dummies
                    , Mirza.BusinessRegistry.Tests.Business
                    , Mirza.BusinessRegistry.Tests.Client
                    , Mirza.BusinessRegistry.Tests.Settings
                    , Mirza.BusinessRegistry.Tests.Utils
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , base64-bytestring
                     , GS1Combinators
                     , supplyChainServer
                     , resource-pool >= 0.2.3
                     , beam-postgres
                     , beam-core
                     , bytestring
                     , directory
                     , filepath
                     , hspec
                     , HsOpenSSL >= 0.11.4.14                     
                     , hspec-core
                     , http-client
                     , MissingH
                     , network
                     , postgresql-simple
                     , servant
                     , text
                     , time
                     , tasty
                     , tasty-hspec
                     , tasty-hunit
                     , hspec-expectations
                     , wai
                     , warp
                     , servant-client
                     , katip
                     , uuid
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror



source-repository head
  type:     git
  location: https://github.csiro.au/Blockchain/supplyChainServer
