name:                Mirza
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/data61/Mirza
license:             BSD3
license-file:        LICENSE
author:              Sara Falamaki
maintainer:          Sara.Falamaki@csiro.au
copyright:           2017, 2018, 2019 CSIRO
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-extensions: OverloadedStrings
                    , FlexibleContexts
                    , FlexibleInstances
  hs-source-dirs:     src
  exposed-modules:    Mirza.OrgRegistry.API
                    , Mirza.OrgRegistry.Client.Servant
                    , Mirza.OrgRegistry.Auth
                    , Mirza.OrgRegistry.Database.Migrate
                    , Mirza.OrgRegistry.Database.Schema
                    , Mirza.OrgRegistry.Database.Schema.V0001
--                    , Mirza.OrgRegistry.Database.Schema.V0002
                    , Mirza.OrgRegistry.Handlers.Org
                    , Mirza.OrgRegistry.Handlers.Health
                    , Mirza.OrgRegistry.Handlers.Keys
                    , Mirza.OrgRegistry.Handlers.Location
                    , Mirza.OrgRegistry.Main
                    , Mirza.OrgRegistry.Service
                    , Mirza.OrgRegistry.Handlers.Users
                    , Mirza.OrgRegistry.Types
                    , Mirza.OrgRegistry.SqlUtils
                    , Mirza.OrgRegistry.GenerateUtils
                    , Mirza.SupplyChain.API
                    , Mirza.SupplyChain.Client.Servant
                    , Mirza.SupplyChain.Database.Migrate
                    , Mirza.SupplyChain.Database.Schema
                    , Mirza.SupplyChain.Database.Schema.V0001
                    , Mirza.SupplyChain.Handlers.Health
                    , Mirza.SupplyChain.EventUtils
                    , Mirza.SupplyChain.Handlers.Queries
                    , Mirza.SupplyChain.Handlers.Signatures
                    , Mirza.SupplyChain.Handlers.EventRegistration
                    , Mirza.SupplyChain.Handlers.UXUtils
                    , Mirza.SupplyChain.Main
                    , Mirza.SupplyChain.QueryUtils
                    , Mirza.SupplyChain.Service
                    , Mirza.SupplyChain.Types
                    , Mirza.SupplyChain.SqlUtils
                    , Mirza.SupplyChain.PopulateUtils


  other-modules:      Mirza.SupplyChain.ErrorUtils
  build-depends:      base >= 4.7 && < 5
                    , GS1Combinators
                    , mirza-common-haskell
                    , aeson
                    , attoparsec
                    , beam-core
                    , beam-migrate
                    , beam-postgres
                    , bytestring
                    , email-validate
                    , hoist-error >= 0.2
                    , http-client
                    , insert-ordered-containers
                    , katip >= 0.5.4
                    , lens
                    , mirza-common-haskell
                    , mtl
                    , network-uri
                    , optparse-applicative
                    , postgresql-simple
                    , random
                    , resource-pool >= 0.2.3
                    , servant
                    , servant-client >= 0.13
                    , servant-flatten
                    , servant-server
                    , servant-swagger
                    , servant-swagger-ui
                    , servant-auth
                    , servant-auth-server
                    , servant-auth-client
                    , swagger2
                    , text
                    , time
                    , transformers >= 0.4
                    , uuid
                    , uuid-types
                    , wai
                    , wai-cors
                    , unordered-containers
                    , hashable
                    , warp
                    , jose
                    , cryptonite
                    , gitrev
  default-language:   Haskell2010


executable supplyChainServer
  hs-source-dirs:       app
  main-is:              SupplyChainServer.hs
  ghc-options:          -threaded -Wall -Werror -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , Mirza

executable orgRegistry
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              OrgRegistry.hs
  ghc-options:          -threaded -Wall -Werror -rtsopts -with-rtsopts=-N
  build-depends:        base >= 4.7 && < 5
                      , Mirza

test-suite supplyChainServer-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Mirza/SupplyChain/Spec.hs
  other-modules:      Mirza.Common.Tests.ServantUtils
                    , Mirza.Common.Tests.Utils
                    , Mirza.Common.Tests.InitClient
                    , Mirza.OrgRegistry.Tests.Dummies
                    , Mirza.SupplyChain.Tests.Service
                    , Mirza.SupplyChain.Tests.Dummies
                    , Mirza.SupplyChain.Tests.Client
                    , Mirza.SupplyChain.Tests.Citrus
                    , Mirza.OrgRegistry.Tests.Utils
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , GS1Combinators
                     , Mirza
                     , mirza-common-haskell
                     , resource-pool >= 0.2.3
                     , aeson
                     , beam-core
                     , beam-postgres
                     , bytestring
                     , hspec
                     , hspec-core
                     , lens
                     , mtl
                     , network
                     , network-uri
                     , postgresql-simple
                     , process
                     , servant
                     , servant-auth-client
                     , text
                     , time
                     , uuid
                     , tasty
                     , tasty-hspec
                     , tasty-hunit
                     , transformers
                     , hspec-expectations
                     , wai
                     , warp
                     , servant-client
                     , katip
                     , temporary
                     , jose
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror

test-suite orgRegistry-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Mirza/OrgRegistry/Spec.hs
  other-modules:      Mirza.Common.Tests.ServantUtils
                    , Mirza.Common.Tests.Utils
                    , Mirza.Common.Tests.InitClient
                    , Mirza.OrgRegistry.Tests.Keys
                    , Mirza.OrgRegistry.Tests.Dummies
                    , Mirza.OrgRegistry.Tests.Org
                    , Mirza.OrgRegistry.Tests.Client
                    , Mirza.Common.Tests.Utils
                    , Mirza.OrgRegistry.Tests.Utils
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , base64-bytestring
                     , GS1Combinators
                     , Mirza
                     , mirza-common-haskell
                     , resource-pool >= 0.2.3
                     , beam-postgres
                     , beam-core
                     , bytestring
                     , email-validate
                     , directory
                     , filepath
                     , hspec
                     , hspec-core
                     , http-client
                     , http-types
                     , lens
                     , MissingH
                     , mtl
                     , network
                     , network-uri
                     , postgresql-simple
                     , process
                     , servant
                     , servant-auth-client
                     , text
                     , time
                     , tasty
                     , tasty-hspec
                     , tasty-hunit
                     , transformers
                     , hspec-expectations
                     , wai
                     , warp
                     , servant-client
                     , katip
                     , uuid
                     , temporary
                     , jose
                     , aeson
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror



source-repository head
  type:     git
  location: https://github.com/data61/Mirza
